--- a/package.json
+++ b/package.json
@@ -24,16 +24,18 @@
     "@clr/ui": "3.0.0",
     "@webcomponents/webcomponentsjs": "2.0.0",
     "apollo-angular": "1.9.1",
+    "apollo-angular-link-http": "1.10.0",
+    "apollo-cache-inmemory": "1.6.0",
+    "apollo-client": "2.6.0",
+    "apollo-link": "1.2.11",
+    "graphql": "14.6.0",
+    "graphql-tag": "2.10.0",
+    "jwt-decode": "^2.2.0",
+    "ngx-cookie-service": "^3.0.4",
     "prettier": "2.0.5",
     "rxjs": "6.5.4",
     "tslib": "2.0.0",
-    "zone.js": "0.10.2",
-    "apollo-angular-link-http": "1.10.0",
-    "apollo-link": "1.2.11",
-    "apollo-client": "2.6.0",
-    "apollo-cache-inmemory": "1.6.0",
-    "graphql-tag": "2.10.0",
-    "graphql": "14.6.0"
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.1000.0",
