--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.0.1",
-    "@angular/common": "10.0.1",
-    "@angular/compiler": "10.0.1",
-    "@angular/core": "10.0.1",
-    "@angular/forms": "10.0.1",
-    "@angular/platform-browser": "10.0.1",
-    "@angular/platform-browser-dynamic": "10.0.1",
-    "@angular/router": "10.0.1",
+    "@angular-builders/custom-webpack": "^9.2.0",
+    "@angular/animations": "^9.0.7",
+    "@angular/common": "^9.0.7",
+    "@angular/compiler": "^9.0.7",
+    "@angular/core": "^9.0.7",
+    "@angular/forms": "^9.0.7",
+    "@angular/platform-browser": "^9.0.7",
+    "@angular/platform-browser-dynamic": "^9.0.7",
+    "@angular/router": "^9.0.7",
     "@clr/angular": "3.1.4",
     "@clr/icons": "3.0.0",
     "@clr/ui": "3.0.0",
@@ -38,13 +39,13 @@
     "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1000.0",
-    "@angular/cli": "10.0.0",
-    "@angular/compiler-cli": "10.0.1",
-    "@angular/language-service": "10.0.1",
-    "@types/node": "12.11.1",
+    "@angular/cli": "9.0.7",
+    "@angular/compiler-cli": "^9.0.7",
+    "@angular/language-service": "^9.0.7",
+    "@types/graphql": "^14.5.0",
     "@types/jasmine": "3.5.0",
     "@types/jasminewd2": "2.0.3",
+    "@types/node": "12.11.1",
     "codelyzer": "5.1.2",
     "jasmine-core": "3.5.0",
     "jasmine-spec-reporter": "5.0.0",
@@ -56,6 +57,6 @@
     "protractor": "7.0.0",
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
-    "typescript": "3.9.5"
+    "typescript": "3.7.5"
   }
 }
