feat: 🎸 added pipes to parse readmes, rendered it in component

--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "graphql": "14.6.0",
     "graphql-tag": "2.10.0",
     "jwt-decode": "^2.2.0",
+    "marked": "^1.1.0",
     "ngx-cookie-service": "^3.0.4",
     "prettier": "2.0.5",
+    "rst2html": "^1.0.4",
     "rxjs": "6.5.4",
     "tslib": "2.0.0",
     "zone.js": "0.10.2"
