feat: 🎸 added commit listing, download and licence tooltips

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "apollo-cache-inmemory": "1.6.0",
     "apollo-client": "2.6.0",
     "apollo-link": "1.2.11",
+    "file-saver": "^2.0.2",
     "graphql": "14.6.0",
     "graphql-tag": "2.10.0",
     "jwt-decode": "^2.2.0",
@@ -44,6 +45,7 @@
     "@angular/cli": "9.0.7",
     "@angular/compiler-cli": "^9.0.7",
     "@angular/language-service": "^9.0.7",
+    "@types/file-saver": "^2.0.1",
     "@types/graphql": "^14.5.0",
     "@types/jasmine": "3.5.0",
     "@types/jasminewd2": "2.0.3",
