--- a/angular.json
+++ b/angular.json
@@ -93,8 +93,11 @@
                     }
                 },
                 "test": {
-                    "builder": "@angular-devkit/build-angular:karma",
+                    "builder": "@angular-builders/custom-webpack:karma",
                     "options": {
+                        "customWebpackConfig": {
+                            "path": "./webpack/webpack-additional.config.js"
+                        },
                         "main": "src/test.ts",
                         "polyfills": "src/polyfills.ts",
                         "tsConfig": "tsconfig.spec.json",
